💥 docs: 初始化 admilk 项目
- 添加 .gitignore 文件，忽略 node_modules 和 .vitepress/dist 目录
- 创建 package.json 文件，配置项目基本信息和依赖
- 引入 vitepress 作为文档生成工具

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "admilk",
+  "version": "1.0.0",
+  "license": "MIT",
+  "devDependencies": {
+    "vitepress": "^0.20.3"
+  },
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
