--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "devDependencies": {
-    "vitepress": "^0.20.3",
-    "typescript": "^4.4.0"
+    "typescript": "^5.8.2",
+    "vitepress": "^0.20.3"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
