💚 ci(deploy): 列出构建后的文件列表
- 在 GitHub Actions 的 deploy.yml 文件中添加了一个新的步骤
- 该步骤在构建完成后列出 docs/.vitepress 目录下的所有文件
- 这个改动可以帮助开发者确认构建输出的内容

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,8 @@ jobs:
         run: npm ci
       - name: Build with VitePress
         run: npm run docs:build
+      - name: List files after build
+        run: ls -R docs/.vitepress
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
