🐛 ci: 优化 GitHub Actions 部署工作流
- 移除了不必要的文件列表步骤
- 更新了上传工件的路径，从 docs/.vitepress/dist 改为 .vitepress/dist

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,12 +31,10 @@ jobs:
         run: npm ci
       - name: Build with VitePress
         run: npm run docs:build
-      - name: List files after build
-        run: ls -R docs/.vitepress
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/.vitepress/dist
+          path: .vitepress/dist
 
   deploy:
     environment:
