--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,57 +1,41 @@
-name: Deploy Website
+name: Deploy VitePress site to Pages
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - '.github/workflows/deploy.yml'
-      - '/**'
+    branches: [main]
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: pages
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./website
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Not needed if lastUpdated is not enabled
+          fetch-depth: 0
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: latest
-          cache: pnpm # or pnpm / yarn
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+          node-version: 20
+          cache: 'npm'
       - name: Install dependencies
-        run: npm install --frozen-lockfile
+        run: npm ci
       - name: Build with VitePress
-        run: |
-          pnpm docs:build
-          touch docs/.vitepress/dist/.nojekyll
+        run: npm run docs:build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/.vitepress/dist
+          path: .vitepress/dist
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
