--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^5.8.2",
-    "vitepress": "^0.20.3"
+    "vitepress": "1.6.3"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
